Bug 1798181 - Make sure listener is invoked upon write failure for IMAP/News folder compaction. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D161001

--HG--
extra : moz-landing-system : lando